--- a/css/style.css
+++ b/css/style.css
@@ -932,6 +932,7 @@ ul li {
 	transition: 0.6s ease-in-out;
 	-webkit-transition-delay: 0s;
 	transition-delay: 0s;
+	opacity: 0.5;
 }
 
 .orb-photo-frame .orb-zoom {
