--- a/css/style.css
+++ b/css/style.css
@@ -1813,11 +1813,11 @@ label.cbx {
 ==================================== */
 
 .orb-home-2 {
-	background-color: #3a2119;
+	background-color: black;
 }
 
 .orb-home-2 .orb-photo-frame:after {
-	background-color: #3a2119;
+	background-color: black;
 }
 
 .orb-home-2 .orb-top-bar-frame {
@@ -2142,7 +2142,7 @@ label.cbx {
 }
 
 .orb-home-3 .orb-photo-frame:after {
-	background-color: #3a2119;
+	background-color: black;
 }
 
 .orb-home-3 .orb-top-bar-frame {
@@ -2608,7 +2608,7 @@ label.cbx {
 }
 
 .orb-home-5 .orb-photo-frame:after {
-	background-color: #3a2119;
+	background-color: black;
 }
 
 .orb-home-5 .orb-top-bar-frame {
@@ -2879,7 +2879,7 @@ label.cbx {
 }
 
 .orb-portfolio-2 .orb-photo-frame:after {
-	background-color: #3a2119;
+	background-color: black;
 }
 
 .orb-portfolio-2 .orb-top-bar-frame {
@@ -3972,7 +3972,7 @@ label.cbx {
 }
 
 .orb-contact-2 .orb-photo-frame:after {
-	background-color: #3a2119;
+	background-color: black;
 }
 
 .orb-contact-2 .orb-top-bar-frame {
@@ -4240,7 +4240,7 @@ label.cbx {
 }
 
 .orb-contact-3 .orb-photo-frame:after {
-	background-color: #3a2119;
+	background-color: black;
 }
 
 .orb-contact-3 .orb-top-bar-frame {
@@ -4476,7 +4476,7 @@ label.cbx {
 }
 
 .orb-about-1 .orb-photo-frame:after {
-	background-color: #3a2119;
+	background-color: black;
 }
 
 .orb-about-1 .orb-top-bar-frame {
@@ -4904,7 +4904,7 @@ label.cbx {
 }
 
 .orb-about-3 .orb-photo-frame:after {
-	background-color: #3a2119;
+	background-color: black;
 }
 
 .orb-about-3 .orb-top-bar-frame {
